ssh-import-id (3.18) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 29 Apr 2013 09:49:54 -0500

ssh-import-id (3.17-0ubuntu1) saucy; urgency=low

  * Another no-change release for Ubuntu

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 29 Apr 2013 09:49:51 -0500

ssh-import-id (3.16-0ubuntu1) saucy; urgency=low

  * Empty release for upload to Ubuntu saucy
    - ssh-import-id 3.15 was released after raring closed, but before
      saucy opened

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 29 Apr 2013 09:40:34 -0500

ssh-import-id (3.15-0ubuntu1) sexy; urgency=low

  * bin/ssh-import-id: LP: #1172434
    - create the keyfile destination directory, if necessary

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 24 Apr 2013 21:41:01 -0500

ssh-import-id (3.14-0ubuntu1) raring; urgency=low

  * bin/ssh-import-id-gh, bin/ssh-import-id-lp: LP: #1155252
    - python requests module must be >= 1.1.0, for ssl certificate
      verification and proper quoting; fall back to wget if module
      is available, but older

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 15 Mar 2013 10:12:40 -0500

ssh-import-id (3.13-0ubuntu1) raring; urgency=low

  * debian/rules:
    - fix FTBFS, no need to syntax check setup.py

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 15 Feb 2013 16:58:04 -0600

ssh-import-id (3.12-0ubuntu1) raring; urgency=low

  * debian/control:
    - note github.com in the package description
  * bin/ssh-import-id, ssh-import-id.1:
    - rename the --revoke option to --remove
    - we're not really "revoking" keys, but rather just removing them
      from the authorized_keys file

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 15 Feb 2013 15:03:53 -0600

ssh-import-id (3.11-0ubuntu1) raring; urgency=low

  * bin/ssh-import-id:
    - cleanup tempfiles left around in case we die() early

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 08 Feb 2013 12:35:13 -0600

ssh-import-id (3.10-0ubuntu1) raring; urgency=low
